--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -1,25 +1,101 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<head>
+		<!-- Required meta tags -->
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+		<!-- Bootstrap CSS -->
+		<link
+			rel="stylesheet"
+			href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+			crossorigin="anonymous"
+		/>
+		<title>Friend Finder</title>
+	</head>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<body>
+		<div class="container bg-warning p-5">
+			<h1 class="display-1 text-dark">friend finder</h1>
+			<hr />
+			<h3 class="text-dark">Survey Questions</h3>
+			<br />
+			<form>
+				<!--Question 1-->
+				<div class="form-group">
+					<label for="formControlRange">Example Range input</label>
+					<input type="range" class="form-control-range" id="formControlRange" />
+					<div class="row">
+						<div class="col text-center">Definitely</div>
+						<div class="col text-center">Probably</div>
+						<div class="col text-center">Possibly</div>
+						<div class="col text-center">Probably Not</div>
+						<div class="col text-center">Definitely Not</div>
+					</div>
+				</div>
+				<br />
+				<!--Question 2-->
+				<div class="form-group">
+					<label for="formControlRange">Example Range input</label>
+					<input type="range" class="form-control-range" id="formControlRange" />
+					<div class="row">
+						<div class="col text-center">Definitely</div>
+						<div class="col text-center">Probably</div>
+						<div class="col text-center">Possibly</div>
+						<div class="col text-center">Probably Not</div>
+						<div class="col text-center">Definitely Not</div>
+					</div>
+				</div>
+				<br />
+				<!--Question 3-->
+				<div class="form-group">
+					<label for="formControlRange">Example Range input</label>
+					<input type="range" class="form-control-range" id="formControlRange" />
+					<div class="row">
+						<div class="col text-center">Definitely</div>
+						<div class="col text-center">Probably</div>
+						<div class="col text-center">Possibly</div>
+						<div class="col text-center">Probably Not</div>
+						<div class="col text-center">Definitely Not</div>
+					</div>
+				</div>
+				<br />
+			</form>
+			<br />
 
-    <title>Friend Finder</title>
-  </head>
-  <body>
+			<a href="/survey"
+				><button type="button" class="btn btn-primary btn-lg">
+					Submit
+				</button></a
+			>
+		</div>
+		<footer class="footer">
+			<div class="container py-1">
+				<p>
+					<a class="text-secondary" href="/api/friends">API Friends List</a> |
+					<a class="text-secondary" href="https://github.com/robertalanis/friend-finder"
+						>GitHub Repo</a
+					>
+				</p>
+			</div>
+		</footer>
 
-    <h1 class="display-1">Display 1</h1>
-
-
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+		<!-- Optional JavaScript -->
+		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+		<script
+			src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+			integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+			integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+			integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+			crossorigin="anonymous"
+		></script>
+	</body>
 </html>
