--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -1,101 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<!-- Required meta tags -->
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-		<!-- Bootstrap CSS -->
-		<link
-			rel="stylesheet"
-			href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-			crossorigin="anonymous"
-		/>
-		<title>Friend Finder</title>
-	</head>
 
-	<body>
-		<div class="container bg-warning p-5">
-			<h1 class="display-1 text-dark">friend finder</h1>
-			<hr />
-			<h3 class="text-dark">Survey Questions</h3>
-			<br />
-			<form>
-				<!--Question 1-->
-				<div class="form-group">
-					<label for="formControlRange">Example Range input</label>
-					<input type="range" class="form-control-range" id="formControlRange" />
-					<div class="row">
-						<div class="col text-center">Definitely</div>
-						<div class="col text-center">Probably</div>
-						<div class="col text-center">Possibly</div>
-						<div class="col text-center">Probably Not</div>
-						<div class="col text-center">Definitely Not</div>
-					</div>
-				</div>
-				<br />
-				<!--Question 2-->
-				<div class="form-group">
-					<label for="formControlRange">Example Range input</label>
-					<input type="range" class="form-control-range" id="formControlRange" />
-					<div class="row">
-						<div class="col text-center">Definitely</div>
-						<div class="col text-center">Probably</div>
-						<div class="col text-center">Possibly</div>
-						<div class="col text-center">Probably Not</div>
-						<div class="col text-center">Definitely Not</div>
-					</div>
-				</div>
-				<br />
-				<!--Question 3-->
-				<div class="form-group">
-					<label for="formControlRange">Example Range input</label>
-					<input type="range" class="form-control-range" id="formControlRange" />
-					<div class="row">
-						<div class="col text-center">Definitely</div>
-						<div class="col text-center">Probably</div>
-						<div class="col text-center">Possibly</div>
-						<div class="col text-center">Probably Not</div>
-						<div class="col text-center">Definitely Not</div>
-					</div>
-				</div>
-				<br />
-			</form>
-			<br />
+<head>
+	<!-- Required meta tags -->
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+	<title>Friend Finder</title>
+</head>
 
-			<a href="/survey"
-				><button type="button" class="btn btn-primary btn-lg">
-					Submit
-				</button></a
-			>
+<body>
+	<!-- Content -->
+	<div class="container bg-warning p-5">
+		
+		<h1 class="display-1 text-dark">friend finder</h1>
+		<hr />
+		<h3 class="text-dark">About You</h3>
+		<br>
+		<h5>Name (Required)</h5>
+		<input type="text" id="name" class="form-control" required="">
+		<br>	
+		<h5>Link to Photo Image (Required)</h5>
+		<input type="text" id="photo" class="form-control" required="">
+	
+		<hr>
+
+		<br />
+		<!-- Submit Button -->
+		<!-- Button trigger modal -->
+		<button type="button" id="submit" class="btn btn-primary" data-toggle="modal" data-target="#modal">
+			Submit
+		</button>
+	</div>
+
+	<!-- Footer -->
+	<footer class="footer">
+		<div class="container py-1">
+			<p>
+				<a class="text-secondary" href="/api/friends">API Friends List</a> |
+				<a class="text-secondary" href="https://github.com/robertalanis/friend-finder">GitHub Repo</a>
+			</p>
 		</div>
-		<footer class="footer">
-			<div class="container py-1">
-				<p>
-					<a class="text-secondary" href="/api/friends">API Friends List</a> |
-					<a class="text-secondary" href="https://github.com/robertalanis/friend-finder"
-						>GitHub Repo</a
-					>
-				</p>
-			</div>
-		</footer>
+	</footer>
 
-		<!-- Optional JavaScript -->
-		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-		<script
-			src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-			integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-			crossorigin="anonymous"
-		></script>
-		<script
-			src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-			integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-			crossorigin="anonymous"
-		></script>
-		<script
-			src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-			integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-			crossorigin="anonymous"
-		></script>
-	</body>
+	<!-- Modal -->
+	<div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel"
+		aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="modalLabel">Modal title</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					...
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- JavaScript -->
+
+	
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+		crossorigin="anonymous"></script>
+</body>
+
 </html>
