bootstrap survey with palceholder questions

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -15,7 +15,7 @@
 	</head>
 
 	<body>
-		<div class="container bg-warning p-5">
+		<div class="container rounded-bottom bg-warning p-5">
 			<h1 class="display-1 text-dark">friend finder</h1>
 			<hr />
 			<h3 class="text-dark">Answer a few questions...</h3>
