--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -17,15 +17,137 @@
 		
 		<h1 class="display-1 text-dark">friend finder</h1>
 		<hr />
-		<h3 class="text-dark">About You</h3>
-		<br>
+		<!-- Name Field -->
 		<h5>Name (Required)</h5>
 		<input type="text" id="name" class="form-control" required="">
-		<br>	
+		<br>
+		<!-- Upload Immage Field -->	
 		<h5>Link to Photo Image (Required)</h5>
 		<input type="text" id="photo" class="form-control" required="">
-	
-		<hr>
+		<br>
+		<!-- Question 1 -->
+		<div class="form-group">
+			<label for="question-one"><h5>I enjoy being outdoors.</h5></label>
+			<select id="question1" class="custom-select mb-3">
+				<option value="0"></option>
+				<option value="1">strongly agree</option>
+				<option value="2">agree</option>
+				<option value="3">neither agree nor disagree</option>
+				<option value="4">disagree</option>
+				<option value="5">strongly disagree</option>
+			  </select>
+		  </div>
+		  <!-- Question 2 -->
+		<div class="form-group">
+			<label for="question-two"><h5>I enjoy being outdoors.</h5></label>
+			<select id="question2" class="custom-select mb-3">
+				<option value="0"></option>
+				<option value="1">strongly agree</option>
+				<option value="2">agree</option>
+				<option value="3">neither agree nor disagree</option>
+				<option value="4">disagree</option>
+				<option value="5">strongly disagree</option>
+			  </select>
+		  </div>
+		  <!-- Question 3 -->
+		<div class="form-group">
+			<label for="question-three"><h5>I enjoy being outdoors.</h5></label>
+			<select id="question3" class="custom-select mb-3">
+				<option value="0"></option>
+				<option value="1">strongly agree</option>
+				<option value="2">agree</option>
+				<option value="3">neither agree nor disagree</option>
+				<option value="4">disagree</option>
+				<option value="5">strongly disagree</option>
+			  </select>
+		  </div>
+		  <!-- Question 4 -->
+		<div class="form-group">
+			<label for="question-four"><h5>I enjoy being outdoors.</h5></label>
+			<select id="question4" class="custom-select mb-3">
+				<option value="0"></option>
+				<option value="1">strongly agree</option>
+				<option value="2">agree</option>
+				<option value="3">neither agree nor disagree</option>
+				<option value="4">disagree</option>
+				<option value="5">strongly disagree</option>
+			  </select>
+		  </div>
+		  <!-- Question 5 -->
+		<div class="form-group">
+			<label for="question-five"><h5>I enjoy being outdoors.</h5></label>
+			<select id="question5" class="custom-select mb-3">
+				<option value="0"></option>
+				<option value="1">strongly agree</option>
+				<option value="2">agree</option>
+				<option value="3">neither agree nor disagree</option>
+				<option value="4">disagree</option>
+				<option value="5">strongly disagree</option>
+			  </select>
+		  </div>
+		  <!-- Question 6 -->
+		<div class="form-group">
+			<label for="question-six"><h5>I enjoy being outdoors.</h5></label>
+			<select id="question6" class="custom-select mb-3">
+				<option value="0"></option>
+				<option value="1">strongly agree</option>
+				<option value="2">agree</option>
+				<option value="3">neither agree nor disagree</option>
+				<option value="4">disagree</option>
+				<option value="5">strongly disagree</option>
+			  </select>
+		  </div>
+		  <!-- Question 7 -->
+		<div class="form-group">
+			<label for="question-seven"><h5>I enjoy being outdoors.</h5></label>
+			<select id="question7" class="custom-select mb-3">
+				<option value="0"></option>
+				<option value="1">strongly agree</option>
+				<option value="2">agree</option>
+				<option value="3">neither agree nor disagree</option>
+				<option value="4">disagree</option>
+				<option value="5">strongly disagree</option>
+			  </select>
+		  </div>
+		  <!-- Question 8 -->
+		<div class="form-group">
+			<label for="question-eight"><h5>I enjoy being outdoors.</h5></label>
+			<select id="question8" class="custom-select mb-3">
+				<option value="0"></option>
+				<option value="1">strongly agree</option>
+				<option value="2">agree</option>
+				<option value="3">neither agree nor disagree</option>
+				<option value="4">disagree</option>
+				<option value="5">strongly disagree</option>
+			  </select>
+		  </div>
+		  <!-- Question 9 -->
+		<div class="form-group">
+			<label for="question-nine"><h5>I enjoy being outdoors.</h5></label>
+			<select id="question9" class="custom-select mb-3">
+				<option value="0"></option>
+				<option value="1">strongly agree</option>
+				<option value="2">agree</option>
+				<option value="3">neither agree nor disagree</option>
+				<option value="4">disagree</option>
+				<option value="5">strongly disagree</option>
+			  </select>
+		  </div>
+		  <!-- Question 10 -->
+		<div class="form-group">
+			<label for="question-ten"><h5>I enjoy being outdoors.</h5></label>
+			<select id="question10" class="custom-select mb-3">
+				<option value="0"></option>
+				<option value="1">strongly agree</option>
+				<option value="2">agree</option>
+				<option value="3">neither agree nor disagree</option>
+				<option value="4">disagree</option>
+				<option value="5">strongly disagree</option>
+			  </select>
+		  </div>
+
+		
+		  
 
 		<br />
 		<!-- Submit Button -->
